--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-i18next": "^14.0.1"
+    "react-i18next": "^14.0.1",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/i18next": "^13.0.0",
