--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "i18next": "^23.7.18",
@@ -17,6 +19,14 @@
     "react-responsive": "^9.0.2"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.6.14",
+    "@storybook/addon-interactions": "^7.6.14",
+    "@storybook/addon-links": "^7.6.14",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.14",
+    "@storybook/nextjs": "^7.6.14",
+    "@storybook/react": "^7.6.14",
+    "@storybook/test": "^7.6.14",
     "@types/i18next": "^13.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -24,6 +34,8 @@
     "@types/react-i18next": "^8.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "storybook": "^7.6.14",
     "typescript": "^5"
   }
 }
