--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "sass": "^1.70.0",
     "storybook": "^7.6.14",
     "typescript": "^5"
   }
