feat/CA-3.1: add dependency

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "build-icon": "npx -p svg-to-ts svg-to-ts-files --config ./.svg-to-tsrc.json"
   },
   "dependencies": {
     "i18next": "^23.7.18",
@@ -37,6 +38,7 @@
     "eslint-plugin-storybook": "^0.6.15",
     "sass": "^1.70.0",
     "storybook": "^7.6.14",
+    "svg-to-ts": "^11.0.1",
     "typescript": "^5"
   }
 }
