feat/CA-3.1: change url of icons

--- a/.svg-to-tsrc.json
+++ b/.svg-to-tsrc.json
@@ -3,7 +3,7 @@
     "outputDirectory": "./src/components/stories/Icon/SmartSavingsIcon",
     "interfaceName": "SmartSavingsIcon",
     "typeName": "SmartSavingsIconName",
-    "prefix": "",
+    "prefix": "smartsaving",
     "delimiter": "KEBAB",
     "fileName": "smartsavings-icon.model",
     "additionalModelOutputPath": "./src/components/stories/Icon/SmartSavingsIcon/lib",
