--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "eslint-plugin-storybook": "^0.6.15",
+    "path-to-regexp": "^6.2.1",
     "sass": "^1.70.0",
     "storybook": "^7.6.14",
     "svg-to-ts": "^11.0.1",
