--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@maskito/kit": "^2.0.2",
     "@maskito/react": "^2.0.2",
     "i18next": "^23.7.18",
+    "luxon": "^3.4.4",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -32,6 +33,7 @@
     "@storybook/react": "^7.6.14",
     "@storybook/test": "^7.6.14",
     "@types/i18next": "^13.0.0",
+    "@types/luxon": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
