--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run build-icon && next dev",
+    "dev": "npm run build-icon && next dev --port=4201",
     "build": "npm run build-icon && next build",
     "start:prod": "next start -- --port=4201",
     "lint": "next lint",
@@ -21,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.0.1",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "recharts": "^2.12.3"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.14",
