--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "luxon": "^3.4.4",
     "next": "14.1.0",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-i18next": "^14.0.1",
     "react-responsive": "^9.0.2",
