--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run build-icon && next dev --port=4201",
+    "dev": "next dev --port=4201",
     "build": "npm run build-icon && next build",
     "start:prod": "next start -- --port=4201",
     "lint": "next lint",
@@ -15,11 +15,14 @@
     "@maskito/core": "^2.0.2",
     "@maskito/kit": "^2.0.2",
     "@maskito/react": "^2.0.2",
+    "i18next": "^23.11.2",
     "luxon": "^3.4.4",
     "next": "14.1.0",
+    "next-i18next": "^15.3.0",
     "react": "^18",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-i18next": "^14.1.0",
     "react-responsive": "^9.0.2",
     "recharts": "^2.12.3"
   },
