--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_APP_ENV=production
-NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:3000
-NEXT_PUBLIC_APP_URL=http://localhost:4200/?accessToken=:accessToken&refreshToken=:refreshToken
+NEXT_PUBLIC_BACKEND_BASE_URL=https://smartsavings.dev/api
+NEXT_PUBLIC_APP_URL=https://app.smartsavings
