--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 NEXT_PUBLIC_APP_ENV=production
 NEXT_PUBLIC_BACKEND_BASE_URL=http://127.0.0.1:3000
 NEXT_PUBLIC_APP_URL=http://localhost:4200/?accessToken=:accessToken&refreshToken=:refreshToken
+NEXT_PUBLIC_MARKETING_URL=https://smartsavings.dev/
